# Backned

./: .gitignore  API.md  Cargo.toml  docker-compose.yml
.github/workflows/: rust.yml
migrations/: 0001_init.sql  0002_audit_logs.sql  0003_notifications_and_dashboards.sql  0004_request_response_enhancements.sql  0005_workflow_and_trust.sql  0006_listing_policy_and_moderation.sql  0007_admin_verification_and_limits.sql  0008_livekit_integration.sql  0009_email_delivery_and_verification.sql  0010_frontend_compat.sql  0011_flow_alignment.sql  0012_flow_alignment_followup.sql
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/services/: audit_service.rs  auth_service.rs  mod.rs  post_service.rs  property_service.rs  trust_service.rs  user_service.rs  workflow_service.rs
src/application/use_cases/: auth.rs  mod.rs  posts.rs  properties.rs  trust.rs  users.rs  workflow.rs
src/config/: mod.rs  settings.rs
src/db/: migrations.rs  mod.rs  pool.rs
src/domain/: mod.rs
src/domain/audit/: mod.rs  model.rs  repository.rs
src/domain/notifications/: mod.rs  model.rs  repository.rs
src/domain/posts/: mod.rs  model.rs  repository.rs
src/domain/properties/: mod.rs  model.rs  repository.rs
src/domain/responses/: mod.rs  model.rs  repository.rs
src/domain/trust/: mod.rs  model.rs  repository.rs
src/domain/users/: mod.rs  model.rs  repository.rs
src/domain/workflow/: mod.rs  model.rs  repository.rs
src/infrastructure/: mod.rs
src/infrastructure/auth/: jwt.rs  mod.rs  (+1 more)
src/utils/: mod.rs  pagination.rs  validation.rs
tests/: core_flows.rs
(+29 files in other folders)
