[package]
name = "realestate"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.1", features = ["macros"] }
chrono = { version = "0.4.40", features = ["serde", "clock"] }
dotenvy = "0.15.7"
http = "1.3.1"
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
rand = "0.8.5"
redis = { version = "0.29.5", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tokio = { version = "1.44.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1.3"
